Update to 1.21 (11) data components